# OSCMiniHack

./: .gitignore  README.md  start_feelink.bat  start_feelink.py  start_simple.py
backend/cpp-mesh/: CMakeLists.txt  ring_buffer.cpp  ring_buffer.hpp
backend/cpp-mesh/include/: bridge.hpp  message.hpp  network.hpp  ring_buffer.hpp  utils.hpp
backend/cpp-mesh/src/: Utils.cpp  bridge.cpp  main.cpp  network.cpp  ring_buffer.cpp  utils.cpp
backend/python-ai/: .gitignore  README.md  analytics.py  app.py  classifier.py  compressor.py  example_run.py  llm_adapter.py  llm_smolagents.md  mood_advisor.py  requirements.txt  summarizer.py  tone_rewriter.py
backend/python-ai/static/: index.html  main.js  styles.css
frontend/: package.json
frontend/public/: index.html
frontend/src/: AISummarizer.js  ARRadar.js  App.js  MeshGraph.js  styles.css
scripts/: start_all.ps1  start_all.sh
